# Pos-tech

./: 1.FundamentsOfAI  README.md  texto_extraido.txt
.github/: bag_of_words.py
1.FundamentsOfAI/Challenge_01/meu_investimento/: README.md  pyproject.toml  setup.py
1.FundamentsOfAI/Challenge_01/meu_investimento/investimentos/: investimentos.py  main.py
1.FundamentsOfAI/Exercicios/: ex_Matplotlib_Seaborn.py  ex_NumPy_SciPy.py  ex_PyTorch.py  ex_Scikit-learn.py  ex_TensorFlow_Keras.py  ex_pandas.py
2.MachineLearning/Exercícios/: regressão_linear.py
3.AdvancedMachineLearning/: KNN_SVM.py
4.Visão computacional/: ocr_imagem.py  ocr_text_pdf.py
FundamentsOfAI/Challenge_01/: code.py
PNL/: bag_of_words.py
PNL/Processamento Linguagem Natural/: bag_of_words.py
Tech_Challenge_01/: tech-challenge_01.py
Visão computacional/: redes_neurais_cnn.py
