[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meu_investimento"
version = "0.1.0"
description = "Pacote para cálculos de investimentos."
authors = [
    { name = "Izabela Oliveira", email = "izabela.oliveira@example.com" }
]
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.21.0"
]
python = ">=3.8"
